refactor: ProjectSearchResponse 수정
- 기존: 담당자 전원 전달
- 수정: 업무 출력형식으로 정규화