@@ -2,11 +2,11 @@ package com.nexerp.domain.project.model.response;
 
 import com.nexerp.domain.project.model.entity.Project;
 import com.nexerp.domain.project.model.enums.ProjectStatus;
+import com.nexerp.global.common.exception.BaseException;
+import com.nexerp.global.common.exception.GlobalErrorCode;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
-
-import com.nexerp.domain.projectmember.model.response.MemberIdNameResponseDto;
 import lombok.Builder;
 import lombok.Getter;
 
@@ -26,19 +26,24 @@ public class ProjectSearchResponse {
 
   private final LocalDateTime projectCreateDate;
 
-  private final List<MemberIdNameResponseDto> projectMembers;
+  private final String projectMembers;
 
   private final ProjectStatus status;
 
   public static ProjectSearchResponse from(Project project) {
 
-    List<MemberIdNameResponseDto> memberDtos = project.getProjectMembers().stream()
-      .map(pm -> pm.getMember())
-      .map(member -> MemberIdNameResponseDto.builder()
-        .memberId(member.getId())
-        .name(member.getName())
-        .build())
-      .collect(Collectors.toList());
+    List<String> memberNames = project.getProjectMembers().stream()
+      .map(pm -> pm.getMember().getName())
+      .toList();
+
+    String assigneeSummary;
+    if (memberNames.isEmpty()) {
+      throw new BaseException(GlobalErrorCode.NOT_FOUND, "프로젝트 담당자를 찾을 수 없습니다.");
+    } else if (memberNames.size() == 1) {
+      assigneeSummary = memberNames.get(0);
+    } else {
+      assigneeSummary = memberNames.get(0) + " 외 " + (memberNames.size() - 1) + "명";
+    }
 
     return ProjectSearchResponse.builder()
       .projectId(project.getId())
@@ -47,7 +52,7 @@ public class ProjectSearchResponse {
       .projectDescription(project.getDescription())
       .projectCustomer(project.getCustomer())
       .projectCreateDate(project.getCreateDate())
-      .projectMembers(memberDtos)
+      .projectMembers(assigneeSummary)
       .status(project.getStatus())
       .build();
   }
